--- a/2延线BOM运行监测系统/2延线BOM运行监测系统.csproj
+++ b/2延线BOM运行监测系统/2延线BOM运行监测系统.csproj
@@ -80,6 +80,9 @@
     <Compile Include="Copy.cs" />
     <Compile Include="GetStationName.cs" />
     <Compile Include="Monitor.cs" />
+    <Compile Include="MonitorLog.xaml.cs">
+      <DependentUpon>MonitorLog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Remote.cs" />
     <Compile Include="ResetIE.cs" />
@@ -102,6 +105,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MonitorLog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
