监测日志按钮功能完成

--- a/2延线BOM运行监测系统/2延线BOM运行监测系统.csproj
+++ b/2延线BOM运行监测系统/2延线BOM运行监测系统.csproj
@@ -57,6 +57,10 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.12\lib\net40\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -77,11 +81,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ConnectDB.cs" />
     <Compile Include="Copy.cs" />
     <Compile Include="GetStationName.cs" />
+    <Compile Include="InsertDB.cs" />
     <Compile Include="Monitor.cs" />
-    <Compile Include="MonitorLog.xaml.cs">
-      <DependentUpon>MonitorLog.xaml</DependentUpon>
+    <Compile Include="MonitorLogWindow.xaml.cs">
+      <DependentUpon>MonitorLogWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Remote.cs" />
@@ -105,7 +111,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="MonitorLog.xaml">
+    <Page Include="MonitorLogWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -129,6 +135,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
