--- a/2延线BOM运行监测系统/2延线BOM运行监测系统.csproj
+++ b/2延线BOM运行监测系统/2延线BOM运行监测系统.csproj
@@ -61,6 +61,7 @@
       <HintPath>..\packages\MySql.Data.6.9.12\lib\net40\MySql.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework.Aero" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
